# brainbank-extract

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
plans/: detection.md  full_registry.md
scripts/: generate_dseg_tsvs.py
src/brainbank_extract/: __init__.py  aggregator.py  api.py  atlases.py  cli.py  discovery.py  io.py
src/brainbank_extract/data/atlases/: 4S1056Parcels_dseg.tsv  4S256Parcels_dseg.tsv  4S356Parcels_dseg.tsv  4S456Parcels_dseg.tsv  4S556Parcels_dseg.tsv  4S656Parcels_dseg.tsv  4S756Parcels_dseg.tsv  4S856Parcels_dseg.tsv  4S956Parcels_dseg.tsv  HCPex_dseg.tsv  aseg_dseg.tsv  schaefer1000x7_tian_s1_dseg.tsv  schaefer1000x7_tian_s2_dseg.tsv  schaefer1000x7_tian_s3_dseg.tsv  schaefer1000x7_tian_s4_dseg.tsv  schaefer100x7_tian_s1_dseg.tsv  schaefer100x7_tian_s2_dseg.tsv  schaefer100x7_tian_s3_dseg.tsv  schaefer100x7_tian_s4_dseg.tsv  schaefer200x7_tian_s1_dseg.tsv  schaefer200x7_tian_s2_dseg.tsv  schaefer200x7_tian_s3_dseg.tsv  schaefer200x7_tian_s4_dseg.tsv  schaefer300x7_tian_s1_dseg.tsv  schaefer300x7_tian_s2_dseg.tsv  schaefer300x7_tian_s3_dseg.tsv  schaefer300x7_tian_s4_dseg.tsv  schaefer400x7_tian_s1_dseg.tsv  schaefer400x7_tian_s2_dseg.tsv  schaefer400x7_tian_s3_dseg.tsv  schaefer400x7_tian_s4_dseg.tsv  schaefer500x7_tian_s1_dseg.tsv  schaefer500x7_tian_s2_dseg.tsv  schaefer500x7_tian_s3_dseg.tsv  schaefer500x7_tian_s4_dseg.tsv  schaefer600x7_tian_s1_dseg.tsv  schaefer600x7_tian_s2_dseg.tsv  schaefer600x7_tian_s3_dseg.tsv  schaefer600x7_tian_s4_dseg.tsv  schaefer700x7_tian_s1_dseg.tsv  (+11 more)
src/brainbank_extract/extractors/: __init__.py  freesurfer.py  qsirecon.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_atlases.py  test_discovery.py  test_freesurfer.py  test_qsirecon.py
